samples/_failures_safe/1761416552_c914ab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5b4e0076.c: In function ‘main’:
./samples/SAFE/__tmp_5b4e0076.c:152:28: error: expected ‘)’ at end of input
  152 |     free(point_array.points
      |         ~                  ^
      |                            )
./samples/SAFE/__tmp_5b4e0076.c:152:5: error: expected declaration or statement at end of input
  152 |     free(point_array.points
      |     ^~~~
